Revert "Added singular/plural forms for complaint info message (FR)"
This reverts commit ab4b0e3d67d5eb27962c837630d68e2bd02d7e2c.

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -862,10 +862,7 @@
       </notes>
       <segment>
         <source>Du hast {num} anonyme Anzeige(n).</source>
-        <target>{ref__icu, select, on {{num, plural,
-        one {Vous avez reçu # plainte anonyme.} 
-        other {Vous avez reçu # plaintes anonymes.}}
-        } other {Vous avez reçu {num} plainte(s) anonyme(s).}}</target>
+        <target>Vous avez reçu {num} plaintes anonymes.</target>
       </segment>
     </unit>
     <unit id="0drragL">
