--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -862,7 +862,7 @@
       </notes>
       <segment>
         <source>Du hast {num} anonyme Anzeige(n).</source>
-        <target>Vous avez reçu {num} plaintes anonymes.</target>
+        <target>Vous avez reçu {num} plainte(s) anonyme(s).</target>
       </segment>
     </unit>
     <unit id="0drragL">
