--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -880,7 +880,7 @@
       </notes>
       <segment>
         <source>Du hast {num} anonyme Anzeige(n).</source>
-        <target>You have received {num} anonymous complaints.</target>
+        <target>You have received {num} anonymous complaint(s).</target>
       </segment>
     </unit>
     <unit id="0drragL">
