--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -7746,7 +7746,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
     </unit>
     <unit id="hEgldti" name="Nachtwache-Waffen">
       <notes>
-        <note category="german">Nachtwache-Waffen</note>
+        <note category="german">Wächterswaffe</note>
         <note category="from">twig:///templates/ajax/game/item_proto_tooltip.html.twig;twig:///templates/ajax/game/item_tooltip.html.twig</note>
       </notes>
       <segment>
@@ -9449,6 +9449,29 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       <segment>
         <source>Dieses Gefühl des Wohlbefindens, das dieser kleine Kaffee hervorruft, bringt dich sofort wieder auf die Beine. Aah!</source>
         <target>The sensation of well-being brought about by this small coffee puts you back on your feet instantly. Aah !</target>
+      </segment>
+    </unit>
+    <unit id="O4qYqLB" name="{watchpoint} pkt attacke">
+      <notes>
+        <note category="german">{watchpoint} pkt attacke</note>
+        <note category="from">twig:///templates/ajax/game/item_tooltip.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>{watchpoint} pkt attacke</source>
+        <target>
+          {ref__icu, select,
+            on {
+              {watchpoint, plural,
+                =-1 {# attack pt}
+                =0 {# attack pt}
+                =1 {# attack pt}
+                other {# attack pts}
+              }
+            }
+            other {# attack pts}
+          }
+        </target>
       </segment>
     </unit>
   </file>
