ES Translation fix for home tab name

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -826,7 +826,7 @@
       </notes>
       <segment>
         <source>Truhe und Aktionen</source>
-        <target>Inventario y Acciones</target>
+        <target>Baúl y Acciones</target>
       </segment>
     </unit>
     <unit id="wMh6wqD" name="Mein(e) {type}">
