--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -7151,7 +7151,7 @@
       </notes>
       <segment>
         <source>&lt;t-stat-up-addict&gt;Schlechte Neuigkeiten! Du bist jetzt abhängig! Von nun an musst du jeden Tag eine Droge nehmen... oder STERBEN!&lt;/t-stat-up-addict&gt;</source>
-        <target><![CDATA[<t-stat-up-addict>Una mala noticia. ¡Te vuelves dependiente! ¡Desde ahora deberás consumir al menos una dosis al día o morirás!</t-stat-up-addict>]]></target>
+        <target><![CDATA[<t-stat-up-addict>Una mala noticia. ¡Te vuelves <strong>dependiente</strong>! ¡Desde ahora deberás consumir <strong>al menos una dosis al día o morirás</strong>!</t-stat-up-addict>]]></target>
       </segment>
     </unit>
     <unit id="sTuI8fr">
@@ -8204,7 +8204,7 @@
       </notes>
       <segment>
         <source>So 'ne Quali bekommt man nicht jeden Tag in die Finger! Sicher, Übelkeit, Zittern und Schweißausbrüche hast du auch damit bekommen, aber die Wirkung ist weitaus stärker als bei 'ner normalen Droge (Du hast einen &lt;strong&gt;AP Bonus&lt;/strong&gt; erhalten)... Übertreibe es aber nicht!</source>
-        <target><![CDATA[¡No todos los días se puede consumir una sutancia de esas! También te da náuseas, temblores, sudores fríos... Pero el efecto es mucho más fuerte que el de una droga normal (Recibes una <strong>bonificación de PA</strong>)... ¡No abuses de esta!]]></target>
+        <target><![CDATA[No todos los días se traga una buena pastilla de esas. Los efectos: náuseas, temblores, sudores fríos... Y la sensación es mucho más intensa (<strong>bonus de PA</strong> recibido). ¡Pero no abuses!]]></target>
       </segment>
     </unit>
     <unit id="35qZHee" name="Deine Wunde wurde geheilt, zumindest oberflächlich...">
