--- a/translations/items+intl-icu.es.xlf
+++ b/translations/items+intl-icu.es.xlf
@@ -7142,7 +7142,7 @@
       </notes>
       <segment>
         <source>Die Medizin gibt dir Kraft: Du bist jetzt immun gegen Infektionen und kannst nicht in einen Ghul verwandelt werden. Diese Wirkung lässt nach dem Angriff nach.</source>
-        <target>Este medicamento ha reforzado tu organismo: no sufrirás de infección ni te transformarás en Mutante. Su efecto desaparecerá después del ataque nocturno. Nota: No te protege de las infecciones por heridas no tratadas antes del ataque.</target>
+        <target><![CDATA[Este medicamento ha reforzado tu organismo: no sufrirás de infección ni te transformarás en Mutante. <strong>Su efecto desaparecerá después del ataque nocturno</strong> Nota: No te protege de las infecciones por heridas no tratadas antes del ataque.]]></target>
       </segment>
     </unit>
     <unit id="hkUU8xN">
@@ -7205,7 +7205,7 @@
       </notes>
       <segment>
         <source>Das {item} beginnt rasch zu wirken. Das Fieber klingt ab, dein Herz beginnt wieder in einem halbwegs normalen Takt zu schlagen... Du warst nicht weit von einem schrecklichen Tod entfernt.</source>
-        <target>Tu {item} hace efecto rápidamente. La fiebre desaparece, tu corazón late a un ritmo normal... Estuviste cerca de una muerte atroz.</target>
+        <target><![CDATA[Tu {item} hace efecto rápidamente. <strong>La fiebre desaparece</strong>, tu corazón late a un ritmo normal... Estuviste cerca de una muerte atroz.]]></target>
       </segment>
     </unit>
     <unit id="SJ.JIzZ">
